fix: dark mode of component

--- a/src/components/ui/QuantitySelector/QuantitySelector.css
+++ b/src/components/ui/QuantitySelector/QuantitySelector.css
@@ -16,7 +16,7 @@
   position: absolute;
   top: 10px;
   right: 10px;
-  background: white;
+  background: var(--primary);
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.12);
   z-index: 20;
   height: 40px;
